--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 <!DOCTYPE html>
-<div w3-include-html="register.html"></div>
+<html> 
+  <head> 
+    <script src="jquery.js"></script> 
+    <script> 
+    $(function(){
+      $("#includedContent").load("register.html"); 
+    });
+    </script> 
+  </head> 
+
+  <body> 
+     <div id="includedContent"></div>
+  </body> 
+</html>
