--- a/index.html
+++ b/index.html
@@ -69,7 +69,27 @@ a {
 </head>
 <body>
 
-<form action="/reg.php">
+<form action="
+
+<?php
+// define variables and set to empty values
+$name = $email = $gender = $comment = $website = "";
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+  $name = test_input($_POST["name"]);
+  $email = test_input($_POST["email"]);
+  $website = test_input($_POST["website"]);
+  $comment = test_input($_POST["comment"]);
+  $gender = test_input($_POST["gender"]);
+}
+
+function test_input($data) {
+  $data = trim($data);
+  $data = stripslashes($data);
+  $data = htmlspecialchars($data);
+  return $data;
+}
+?>">
   <div class="container">
     <h1>Register</h1>
     <p>Please fill in this form to create an account.</p>
