--- a/index.html
+++ b/index.html
@@ -73,14 +73,11 @@ a {
 
 <?php
 // define variables and set to empty values
-$name = $email = $gender = $comment = $website = "";
+$psw = $email = "";
 
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
-  $name = test_input($_POST["name"]);
   $email = test_input($_POST["email"]);
-  $website = test_input($_POST["website"]);
-  $comment = test_input($_POST["comment"]);
-  $gender = test_input($_POST["gender"]);
+  $psw = test_input($_POST["psw"]);
 }
 
 function test_input($data) {
